fixed some spacing and edited textbox

--- a/textinput.css
+++ b/textinput.css
@@ -12,6 +12,12 @@ h1{
     text-align: center;
 }
 
+#caption{
+    color: rgba(31,85,74,1);
+    text-align: center;
+    font-size: 30px;
+}
+
 .content{
 	padding-left: 10px;
 }
@@ -101,19 +107,20 @@ font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 
 
 #txt{
-    width:600px;
-    margin-right: 375px;
+    width:650px;
+    margin-right: 26%;
 	color: #0B5345 ;
-    height: 400px;
-    border: rgba(31,85,74,1) 5px solid;
+    height: 300px;
+    border: gray;
     float: right;
     font-size: x-large;
     padding-right: 25px;
-    padding-left: 25px;
+    padding-left: 20px;
     padding-top: 30px;
+
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius: 30px;
+    border-radius: 10px;
     
 }
 
@@ -129,8 +136,8 @@ color: white;
 border: none;
 padding: 10px 15px;
 margin-top: 20px;
-margin-left: 680px;
-width: 100px;
+margin-left: 655px;
+width: 125px;
 font-style: GT Flexa VAR;
 border-radius: 20px;
 padding-top: 12px;
@@ -164,12 +171,12 @@ color: #0B5345 ;
 
 #social{
     float: right;
-    margin-top: 10px;
+    margin-top: 44%;
 }
 
 
 #design{
-    margin-top: 30px;
+    margin-top: 50%;
 }
 
 /* class for when the user types nothing in the box*/
